[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/faces/1/m/1.png" type="Texture" id=1]
[ext_resource path="res://assets/faces/1/m/2.png" type="Texture" id=2]
[ext_resource path="res://assets/book_px1.png" type="Texture" id=3]
[ext_resource path="res://hand_100.tres" type="DynamicFont" id=4]
[ext_resource path="res://Book.gd" type="Script" id=5]

[node name="Book" type="Node2D"]
script = ExtResource( 5 )

[node name="Book" type="Sprite" parent="."]
position = Vector2( 513, 300 )
scale = Vector2( 2.43333, 2.34375 )
texture = ExtResource( 3 )

[node name="LeftAvatar" type="Sprite" parent="."]
position = Vector2( 192, 134 )
scale = Vector2( 1.79297, 1.64453 )
texture = ExtResource( 1 )

[node name="RightAvatar" type="Sprite" parent="."]
position = Vector2( 626, 140 )
scale = Vector2( 1.78223, 1.68848 )
texture = ExtResource( 2 )

[node name="RightName" type="Label" parent="."]
margin_left = 696.0
margin_top = 90.0
margin_right = 1408.0
margin_bottom = 190.0
rect_scale = Vector2( 0.250028, 0.247471 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "NOMBRE APELLIDO"

[node name="RightData" type="Label" parent="."]
margin_left = 699.0
margin_top = 119.0
margin_right = 1411.0
margin_bottom = 425.0
rect_scale = Vector2( 0.250028, 0.247471 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Datos: datos
Datos: datos
Datos: datos"

[node name="RightInfo" type="Label" parent="."]
margin_left = 575.0
margin_top = 211.0
margin_right = 1867.0
margin_bottom = 1278.0
rect_scale = Vector2( 0.250028, 0.247471 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Texto texto Texto texto Texto texto Texto texto Texto texto Texto texto Texto texto Texto texto.
Texto texto Texto texto Texto texto Texto texto Texto texto Texto texto Texto texto Texto texto."
autowrap = true

[node name="LeftName" type="Label" parent="."]
margin_left = 263.0
margin_top = 91.0
margin_right = 975.0
margin_bottom = 191.0
rect_scale = Vector2( 0.250028, 0.247471 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "NOMBRE APELLIDO"

[node name="LeftData" type="Label" parent="."]
margin_left = 266.0
margin_top = 117.0
margin_right = 978.0
margin_bottom = 423.0
rect_scale = Vector2( 0.250028, 0.247471 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Datos: datos
Datos: datos
Datos: datos"

[node name="LeftInfo" type="Label" parent="."]
margin_left = 139.0
margin_top = 206.0
margin_right = 1431.0
margin_bottom = 1273.0
rect_scale = Vector2( 0.250028, 0.247471 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Texto texto Texto texto Texto texto Texto texto Texto texto Texto texto Texto texto Texto texto.
Texto texto Texto texto Texto texto Texto texto Texto texto Texto texto Texto texto Texto texto."
autowrap = true

[node name="Anterior" type="Button" parent="."]
margin_left = 122.0
margin_top = 503.0
margin_right = 134.0
margin_bottom = 523.0
text = "Anterior"

[node name="Siguiente" type="Button" parent="."]
margin_left = 820.0
margin_top = 498.0
margin_right = 884.0
margin_bottom = 518.0
text = "Siguiente"

[connection signal="pressed" from="Anterior" to="." method="_on_Anterior_pressed"]
[connection signal="pressed" from="Siguiente" to="." method="_on_Siguiente_pressed"]
